--- a/cor_tabular/report.Rmd
+++ b/cor_tabular/report.Rmd
@@ -28,9 +28,11 @@ base::load(here::here("cor_tabular", "output", attr(config,"config"), d))
   
   tlf_labels <- tlf[[i]]
   title_i <- tlf_labels[["table_header"]]
-  title_i <- ifelse(substr(title_i, 1, 11)=="Demographic", title_i, paste(tlf_labels[["table_header"]], d_lab))
+  if (attr(config,"config")!="id27hpv") { 
+    title_i <- ifelse(substr(title_i, 1, 11)=="Demographic", title_i, paste(tlf_labels[["table_header"]], d_lab))
+  }
 
-  if (names(tlf)[i] == "tab_strtm1") {
+  if (names(tlf)[i] %in% c("tab_strtm1", "tab_age")) {
     cat("\n\n\\newgeometry{top=0.1in, bottom=0.1in, left=1in, right=1in}")
     cat("\n\n\\begin{landscape}\n")
   }
