--- a/immuno_tabular/report.Rmd
+++ b/immuno_tabular/report.Rmd
@@ -20,10 +20,10 @@ dats <- list.files(here::here( "immuno_tabular", "output", attr(config,"config")
 opts <- options(knitr.kable.NA = "")
 numi <- 1
 for (d in dats){
+cat("\n\n\\newgeometry{top=0.5in, bottom=0.5in, left=.2in, right=.2in}")
 base::load(here::here("immuno_tabular", "output", attr(config,"config"), d))
   d_lab <- sprintf("(%s)", substr(d, 7, nchar(d)-6)) # name always starts with "Tables" and ends with ".Rdata"
   for (i in 1:length(tlf)) {
-    
   subnum <- 0
   
   tlf_labels <- tlf[[i]]
@@ -42,9 +42,10 @@ base::load(here::here("immuno_tabular", "output", attr(config,"config"), d))
   loop <- if ("loop" %in% tlf_args) tlf_labels[["loop"]] else NA
 
   tab <- get(names(tlf)[i]) 
-   if (is.null(tab)) next
-   if (nrow(tab) == 0) next
-
+ 
+  if (is.null(tab)) next
+  if (nrow(tab) == 0) next
+     
   group_table_col <- if ("group_table_col" %in% tlf_args) {
     tlf_labels[["group_table_col"]] 
     } else NA 
@@ -76,7 +77,8 @@ base::load(here::here("immuno_tabular", "output", attr(config,"config"), d))
       if ("pack_row" %in% tlf_args) {
         pack_row_ind <- table(droplevels(tab.j[, tlf_labels[["pack_row"]]]))  
       }
-
+      
+      
       tab.j <- mutate_all(tab.j, linebreak, align = "l")
       
       if (nrow(tab.j)==1){
@@ -100,7 +102,7 @@ base::load(here::here("immuno_tabular", "output", attr(config,"config"), d))
       col_name.j <- col_name.j[!col_name.j %in% deselect]
       
       
-      tabjk <- kable(if (is.na(deselect)) {tab.j} else {tab.j %>% select(-!!deselect)},
+      tabjk <-  kable(if (is.na(deselect)) {tab.j} else {tab.j %>% select(-!!deselect)},
                      align = "l",
                      format = "latex",
                      booktabs = TRUE,
@@ -108,7 +110,7 @@ base::load(here::here("immuno_tabular", "output", attr(config,"config"), d))
                      escape = FALSE,
                      linesep=line_sep,
                      col.names = linebreak(col_name.j, align="l"),
-                    caption = caption.j
+                     caption = caption.j
                      ) %>%
         column_spec(1, width = ifelse("col1"%in%tlf_args, tlf_labels[["col1"]],"2.7cm")) %>% 
         kable_styling(latex_options = c("repeat_header", "scale_down"), 
@@ -120,6 +122,12 @@ base::load(here::here("immuno_tabular", "output", attr(config,"config"), d))
           tabjk <- pack_rows(tabjk, index = pack_row_ind, escape = FALSE)
         }
 
+      if ("collapse_rows" %in% tlf_args){
+          collapse_cols <-  tlf_labels[["collapse_rows"]]
+          tabjk <- collapse_rows(tabjk, columns = collapse_cols, valign = "top", latex_hline = "none")
+          
+        }
+      
       if ("header_above1" %in% tlf_args) {
           header_above1 <- if(is.list(tlf_labels[["header_above1"]])) {
           tlf_labels[["header_above1"]][[match(j, jloop)]]
@@ -143,8 +151,11 @@ base::load(here::here("immuno_tabular", "output", attr(config,"config"), d))
     }
   numi <- numi + 1
   }
+  
   cat("\n\n\\end{landscape}")
   cat("\n\n\\captionsetup[table]{labelformat=default}")
-  cat("\n\n\\newgeometry{margin=1in}")
+  cat("\n\n\\newgeometry{top=0.5in, bottom=0.5in, left=.2in, right=.2in}")
+
+
   }
 ```
